remove some requirements

--- a/county_quickstart.ipynb
+++ b/county_quickstart.ipynb
@@ -28,23 +28,16 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "import numpy as np\n",
-    "import scipy as sp\n",
-    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates\n",
     "import seaborn as sns\n",
     "import sys\n",
     "sys.path.append('modeling')\n",
     "from viz import viz_interactive, viz_static, viz_map\n",
-    "from modeling import exponential_modeling\n",
     "from bokeh.plotting import figure, show, output_notebook, output_file, save\n",
-    "from functions import merge_data\n",
     "import load_data\n",
-    "from plotly.offline import init_notebook_mode, iplot\n",
     "from fit_and_predict import add_preds\n",
     "import json\n",
     "import datetime\n",
-    "from functions import update_severity_index as severity_index\n",
     "from functions import emerging_index\n",
     "plt.style.use('dark_background')\n",
     "df = load_data.load_county_level()\n",
@@ -853,6 +846,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
