clean up all imports

--- a/functions/add_county_predictions.ipynb
+++ b/functions/add_county_predictions.ipynb
@@ -27,7 +27,6 @@
    ],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
     "from os.path import join as oj\n",
     "import os\n",
     "import pandas as pd\n",
@@ -40,9 +39,7 @@
     "sys.path.append(parentdir + '/modeling')\n",
     "import load_data\n",
     "from fit_and_predict import add_preds\n",
-    "from functions import merge_data\n",
-    "from viz import  viz_interactive, viz_static, viz_map_utils\n",
-    "import plotly.figure_factory as ff\n",
+    "from viz import  viz_interactive, viz_map_utils\n",
     "import plotly\n",
     "import re\n",
     "import plotly.express as px\n",
